syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.aadil.grpc";
option java_outer_classname = "EmployeeProto";
import "google/protobuf/timestamp.proto";
package com.aadil.grpc;

message Employee {
  int32 id = 1;
  string name = 2;
  double salary = 3;
  string address = 4;
  bool isActive = 5;
  bytes profilePicture = 6;
  google.protobuf.Timestamp joinDate = 7;
}

message EmployeeIdRequest{
  int32 id = 1;
}
message DeleteEmployeeResponse{
  string message = 1;
}

message EmployeeList{
  repeated Employee employee = 1;
}

message Empty{
}

service EmployeeService{
  // add an employee
  rpc addEmployee(Employee) returns (Employee);
  // get employee by id
  rpc getEmployeeById(EmployeeIdRequest) returns (Employee);
  // get all employee
  rpc getAllEmployees(Empty) returns (EmployeeList);
  // Delete Employee By Id
  rpc deleteEmployeeById(EmployeeIdRequest) returns (DeleteEmployeeResponse);
  // Update Employee By Id
  rpc updateEmployeeById(Employee) returns (Employee);

}